Day 13: Trade Ledger / Audit Log (closing)